--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
             right: 1rem;
             top: 1rem;
         }
+        .cabecera_principal{
+            display: initial;
+
+        }
+
     }
 
     @media (max-width: 850px) {
@@ -119,10 +124,6 @@
             opacity: 0;
             transform: translateY(-100%);
             transition: transform 0.3s ease-out, opacity 0.3s ease-out;
-        }
-        .contenedor{
-            width: 100% !important ;
-            max-width: none !important;
         }
     }
 
@@ -498,20 +499,4 @@
 </section>
 
 
-<script>
-    let navToggle = document.querySelector(".nav__toggle");
-    let navWrapper = document.querySelector(".nav__wrapper");
 
-    navToggle.addEventListener("click", function () {
-        if (navWrapper.classList.contains("active")) {
-            this.setAttribute("aria-expanded", "false");
-            this.setAttribute("aria-label", "menu");
-            navWrapper.classList.remove("active");
-        } else {
-            navWrapper.classList.add("active");
-            this.setAttribute("aria-label", "close menu");
-            this.setAttribute("aria-expanded", "true");
-        }
-    });
-
-</script>
